tmux: confirm reload

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@
 set -sg escape-time 0
 
 # Add hotkey for reloading tmux config
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Change split bindings
 #unbind '"'
