starship: don't change prompt character

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -33,3 +33,6 @@ style = "bright-purple"
 [status]
 format = "exit [$status]($style) "
 disabled = false
+
+[character]
+format = "[❯](bold green) "
