tmux: fix zsh prompt colours

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,3 +25,6 @@ set -g mouse on
 
 # Use the smallest connected window size as session size (for pairing)
 set-option -g window-size smallest
+
+# Fixes prompt colour codes not working
+set -g default-terminal "screen-256color"
