kitty: install script, sparx config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,20 +1,11 @@
-font_family      menlo
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size        14.0
-
-modify_font cell_width 90%
-modify_font cell_height 110%
-
-# TODO: startup session (directory?)
-# TODO: tab title
-
 disable_ligatures always
 
-scrollback_lines 20000
+scrollback_lines 50000
 
 tab_bar_edge top
 tab_bar_style slant
 tab_activity_symbol *
-#tab_bar_min_tabs 1
+# TODO: tab title
+
+# Load sparx config (if exists)
+include sparx.conf
