kitty: misc updates (although I kinda stopped using it)

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,10 +2,19 @@ disable_ligatures always
 
 scrollback_lines 50000
 
+# Always show tab bar
+tab_bar_min_tabs 1
 tab_bar_edge top
-tab_bar_style slant
+#tab_bar_style separator
+tab_bar_style powerline
+tab_powerline_style angled
+tab_separator " | "
 tab_activity_symbol *
-# TODO: tab title
+tab_title_template "{index}:{title[:30].strip()}"
+
+# Turn off certain shell integrations:
+# - no-title: allows my custom zsh window title logic to work
+#shell_integration no-title
 
 # Load sparx config (if exists)
 include sparx.conf
